# automata-api

./: .dockerignore  .env  Dockerfile  README.md  requirements.txt  setup.cfg
apiautomata/: API.py  AutomataAPIServer.py  __main__.py
apiautomata/echo/: echo.py
apiautomata/holder/: PlainItem.py  PlainItemHolder.py
apiautomata/routes/: home.py  missing.py
apiautomata/routes/auth/: authentication.py
apiautomata/routes/process/: process_enablement.py
apiautomata/routes/transform/: exchange_transform.py
apiautomata/server/: AutomataAPIServer.py
simulations/serve/: __init__.py
tests/apiautomata/holder/: Items_test.py
tests/apiautomata/server/: AutomataAPIServer_test.py
