[metadata]
name = persuader-technology-automata-api
version = 0.0.1
description = Automata API
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    fastapi==0.78.0
    uvicorn==0.17.6
    persuader-technology-automata-core>=0.4.9
    persuader-technology-automata-utilities>=0.1.1

[options.packages.find]
include = apiautomata*
exclude =
    tests
    simulations
    .scripts

[options.entry_points]
console_scripts =
    automata-api-start = apiautomata.__main__:start
